--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@gera2ld/tarjs": "^0.3.1",
     "@tailwindcss/vite": "^4.1.7",
+    "lit": "^3.3.0",
+    "marked": "^15.0.11",
     "tailwindcss": "^4.1.7"
   }
 }
